<resources>
    <string name="app_name">RI7LA GUIDE</string>
    <string name="user">
        Melou
    </string>

    <string name="let_s_start">Simplifiez votre quotidien avec nos services !</string>
    <string name="chercher_vi">chercher place</string>
    <string name="home">Home</string>
    <string name="restaurants">
        Restaurants
    </string>
    <string name="r_nitialisation_de_mot_de_passe">Rénitialisation de mot de passe</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">Profile</string>
    <string name="favoris">Favoris</string>
    <string name="profil">Profil</string>
    <string name="accueil">Accueil</string>
    <string name="mus_es">Musées</string>
    <string name="parc">Parc</string>
    <string name="activit_es">activitées</string>

    <!-- API_KEY -->
    <string name="API_KEY">AIzaSyAaYV5wVt-N6xlw06AushCXpcWUqs3j_Zw</string>
    <!-- API_KEY -->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rat_value">4.3</string>
    <string name="time">ouvert</string>
    <string name="description">Description</string>
    <string name="defaultDescription">Le CityZen Hotel, situé en plein cœur de Paris, est l\'adresse idéale pour explorer la capitale. Profitez de chambres modernes et confortables, d\'une salle de sport ouverte 24h/24 et d\'un bar branché. Idéal pour les voyageurs d\'affaires et les touristes.</string>

</resources>