<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity"
    android:background="@drawable/home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:weightSum="10"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <!-- Utilisateur courant -->
            <View
                android:id="@+id/UserRectangle"
                android:layout_width="140dp"
                android:layout_height="47dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/user"/>

            <TextView
                android:id="@+id/userCourant"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="74dp"
                android:layout_marginTop="31dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="top"
                android:text="@string/user"
                android:textAppearance="@style/user" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:padding="15dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/d1"
                app:cardBackgroundColor="#ffffff"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/restaurants"
                        android:src="@drawable/restaurant"
                        >

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/restaurants"
                        android:textAlignment="center"
                        android:textSize="20sp">

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/d2"
                app:cardBackgroundColor="#ffffff"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/hotels"
                        >

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Hotels"
                        android:textAlignment="center"
                        android:textSize="20sp">

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/d3"
                app:cardBackgroundColor="#ffffff"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/activit_es"
                        android:src="@drawable/musem"
                        >

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/mus_es"
                        android:textAlignment="center"
                        android:textSize="20sp">

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/d4"
                app:cardBackgroundColor="#ffffff"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/park"
                        >

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/parc"
                        android:textAlignment="center"
                        android:textSize="20sp">

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/d5"
                app:cardBackgroundColor="#ffffff"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"

                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/bag"
                        >

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_bold"
                        android:text="centres commerciales"
                        android:textAlignment="center"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/d6"
                app:cardBackgroundColor="#ffffff"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/coffee"
                        >

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_bold"
                        android:text="café"
                        android:textAlignment="center"
                        android:textSize="20sp">

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </GridLayout>


        <!--nav bar en dessous-->

        <LinearLayout
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@drawable/navbarshape"
            android:elevation="16dp"
            android:gravity="center">

            <!-- Premier élément de la nav bar (Home) -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:id="@+id/icon_home"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/home1"
                    android:contentDescription="@string/home"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/icon_home2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/home2"
                    android:contentDescription="@string/profil"
                    />

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/accueil"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- Deuxième élément de la nav bar (Search) -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:id="@+id/icon_favori"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/favori" />
                <ImageView
                    android:id="@+id/icon_favori2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/favori2"
                    android:contentDescription="@string/favori"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/text_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/favori"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- Troisième élément de la nav bar (Profile) -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:id="@+id/icon_profile"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/profil"
                    android:src="@drawable/profile" />
                <ImageView
                    android:id="@+id/icon_profile2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/profile2"
                    android:visibility="gone"

                    android:contentDescription="@string/profil"/>

                <TextView
                    android:id="@+id/text_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>