<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="@drawable/home">

    <!-- Utilisateur courant -->
    <View
        android:id="@+id/UserRectangle"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/user"/>

    <TextView
        android:id="@+id/userCourant"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="top"
        android:text="@string/user"
        android:textAppearance="@style/user" />

    <!-- Titre principal "Let's Start" -->
    <TextView
        android:id="@+id/let_s_start"
        android:layout_width="308dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="106dp"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:lineSpacingExtra="4sp"
        android:text="@string/let_s_start"
        android:textAppearance="@style/let_s_start"
        android:textSize="36sp"
        android:translationY="-2.73sp" />

    <!-- Barre de recherche -->

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/rectangle_8"
        android:completionThreshold="1"
        android:ems="10"
        android:fontFamily="@font/poppins_bold"
        android:hint="Chercher ville"
        android:padding="15dp"
        android:paddingLeft="50dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="14sp">

        <requestFocus />
    </AutoCompleteTextView>
    <!--
    <EditText
        android:id="@+id/searchBar"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/rectangle_8"
        android:hint="Chercher ville"
        android:paddingLeft="50dp"
        android:textSize="14sp" />-->



    <!-- Icône pipe à droite de la barre de recherche -->
    <ImageView
        android:id="@+id/ic_pipe"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignTop="@+id/ic_search"
        android:layout_alignBottom="@+id/ic_search"
        android:layout_marginTop="-2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="-6dp"
        android:layout_toLeftOf="@id/ic_search"
        android:src="@drawable/pipe" />
    <!-- Icône de recherche à gauche de la barre de recherche -->

    <Button
        android:id="@+id/ic_search"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignTop="@id/autoCompleteTextView"
        android:layout_alignParentRight="true"
        android:layout_marginTop="12dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="-6dp"
        android:contentDescription="Chercher"
        android:background="@drawable/searchicon" />

    <!-- Texte "Search Places" -->
    <TextView
        android:id="@+id/chercher_vi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/chercher_vi"
        android:textAppearance="@style/chercher_vi"
        android:textSize="14sp"
        android:textStyle="bold" />








    <!-- Barre de navigation en bas -->


    <TextView
        android:id="@+id/voir_tous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/chercher_vi"
        android:layout_alignBottom="@+id/chercher_vi"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="-7dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="voir tous"
        android:textAppearance="@style/chercher_vi"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />
    <!--recycle view  pour les villes suggéres -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_v_suggested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_nav"
        android:layout_below="@id/voir_tous"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@drawable/navbarshape"
        android:elevation="16dp"
        android:gravity="center">

        <!-- Premier élément de la nav bar (Home) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/home1"

                android:visibility="gone"/>
            <ImageView
                android:id="@+id/icon_home2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/home2" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="Home"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Deuxième élément de la nav bar (Search) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:id="@+id/icon_favori"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/favori" />
            <ImageView
                android:id="@+id/icon_favori2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/favori2"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/text_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="Favori"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Troisième élément de la nav bar (Profile) -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">
            <ImageView
                android:id="@+id/icon_profile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/profile" />
            <ImageView
                android:id="@+id/icon_profile2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/profile2"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/text_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="Profile"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
